--- a/Test150528/Base.lproj/Main.storyboard
+++ b/Test150528/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModule="Test150528" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
@@ -15,11 +16,89 @@
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GkO-z2-5AE">
+                                <rect key="frame" x="16" y="556" width="568" height="44"/>
+                                <items>
+                                    <barButtonItem systemItem="camera" id="MWw-zd-hgx">
+                                        <connections>
+                                            <action selector="onCameraButton:" destination="vXZ-lx-hvc" id="uuQ-KN-hB5"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem title="trim" id="HP3-YC-vNg">
+                                        <connections>
+                                            <segue destination="Ugi-67-t1h" kind="modal" id="goA-Ht-TYi"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="MGL-zD-eoO">
+                                <rect key="frame" x="16" y="20" width="568" height="536"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="GkO-z2-5AE" firstAttribute="top" secondItem="MGL-zD-eoO" secondAttribute="bottom" id="4b6-a9-KLi"/>
+                            <constraint firstItem="MGL-zD-eoO" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="ah7-J7-yrw"/>
+                            <constraint firstItem="MGL-zD-eoO" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" id="c5d-gh-9hS"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="GkO-z2-5AE" secondAttribute="trailing" id="cg7-Lo-TGp"/>
+                            <constraint firstItem="GkO-z2-5AE" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="eyJ-YY-IZm"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="GkO-z2-5AE" secondAttribute="bottom" id="fHw-Td-4qm"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="MGL-zD-eoO" secondAttribute="trailing" id="i6p-Vb-IsI"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="mainImageView" destination="MGL-zD-eoO" id="ggJ-Hm-LMd"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="203" y="447"/>
+        </scene>
+        <!--Trim View Controller-->
+        <scene sceneID="W5h-eR-yjN">
+            <objects>
+                <viewController id="Ugi-67-t1h" customClass="TrimViewController" customModule="Test150528" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="vr4-3t-uO0"/>
+                        <viewControllerLayoutGuide type="bottom" id="p43-sS-5nB"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="vfO-aE-AAy" customClass="TrimView" customModule="Test150528" customModuleProvider="target">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Wv-3h-RsS">
+                                <rect key="frame" x="16" y="570" width="30" height="30"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="lightTextColor"/>
+                                <state key="normal" title="決定">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="vXZ-lx-hvc" kind="modal" id="t7b-36-ff4"/>
+                                </connections>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0yf-1a-d26" customClass="TrimImageView" customModule="Test150528" customModuleProvider="target">
+                                <rect key="frame" x="16" y="0.0" width="568" height="600"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="0yf-1a-d26" secondAttribute="trailing" id="8fq-Qs-A19"/>
+                            <constraint firstItem="0yf-1a-d26" firstAttribute="top" secondItem="vfO-aE-AAy" secondAttribute="topMargin" id="DaA-uC-l0j"/>
+                            <constraint firstItem="0yf-1a-d26" firstAttribute="leading" secondItem="vfO-aE-AAy" secondAttribute="leadingMargin" id="ED8-Vb-Nq9"/>
+                            <constraint firstItem="p43-sS-5nB" firstAttribute="top" secondItem="0yf-1a-d26" secondAttribute="bottom" id="R7K-ba-6O1"/>
+                            <constraint firstItem="2Wv-3h-RsS" firstAttribute="leading" secondItem="vfO-aE-AAy" secondAttribute="leadingMargin" id="at7-pB-5Uo"/>
+                            <constraint firstItem="p43-sS-5nB" firstAttribute="top" secondItem="2Wv-3h-RsS" secondAttribute="bottom" id="cod-Vh-Whk"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="trimImageView" destination="0yf-1a-d26" id="YeV-oh-KdH"/>
+                        <outlet property="trimView" destination="vfO-aE-AAy" id="A2G-8i-0h6"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="y2i-GK-WbL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="860" y="435"/>
         </scene>
     </scenes>
 </document>
